feat: added delete task. feat: added get tasks by email. roadmap: need to fix getting task by id.
