# server/api/controllers/router.js
@@ -7,5 +7,6 @@ export default express
   .post('/login', loginController.login)
   .post('/signup', loginController.signup)
   .post('/task', taskController.saveTask)
-  .put('/task/{id}', taskController.updateTask)
-  .delete('/task/{id}', taskController.deleteTask);
+  .put('/task/:id', taskController.updateTask)
+  .delete('/task/:id', taskController.deleteTask)
+  .get('/:email/tasks', taskController.getTasks);
