# server/api/controllers/tasks/tasks.controller.js
@@ -29,7 +29,7 @@ export class TasksController {
         message: 'Body was empty.',
       });
 
-    TaskService.updateTask(req.body)
+    TaskService.updateTask(req.params.id, req.body)
       .then(() => {
         return res.status(204).end();
       })
@@ -41,10 +41,33 @@ export class TasksController {
   }
 
   deleteTask(req, res) {
-    console.log(req.params.id);
-    TaskService.deleteTask()
+    let id = req.params.id;
+
+    if (id === 'null' || id === undefined)
+      return res.status(400).json({
+        message: 'Invalid id.',
+      });
+
+    TaskService.deleteTask(req.params.id)
       .then(() => {
         return res.status(204).end();
+      })
+      .catch(error => {
+        return res.status(500).json({
+          message: error,
+        });
+      });
+  }
+
+  getTasks(req, res) {
+    TaskService.getTasks(req.params.email)
+      .then(result => {
+        return res
+          .status(200)
+          .json({
+            data: result,
+          })
+          .end();
       })
       .catch(error => {
         return res.status(500).json({
